istio-weather-k8s/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpha-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpha-ui
  template:
    metadata:
      labels:
        app: alpha-ui
    spec:
      #      initContainers:
      #        - name: init-db
      #          image: busybox:1.31
      #          command: ['sh', '-c', 'echo -e "Checking for the availability of Auth Server deployment"; while ! nc -z weather 8080; do sleep 1; printf "-"; done; echo -e "  >> Auth Server has started";']
      containers:
        - name: alpha-ui
          image: proudevops/ui-weather:latest  # leonardtia/ui-weather:latest
          imagePullPolicy: Always  # Set the image pull policy to Always
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: ui
  #annotations:
    # alb.ingress.kubernetes.io/healthcheck-path: /index.html
spec:
  selector:
    app: alpha-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP #NodePort
